ceammc/ext/src/lib/lex/parser_timeline.cpp

#line 1 "lex/parser_timeline.rl"
# include "ceammc_music_theory_tempo.h"
# include "fmt/core.h"
# include "parser_numeric.h"
# include "parser_timeline.h"
# include "parser_units.h"
# include "ragel_common.h"
# include "ceammc_format.h"

# include <cstring>
# include <limits>
# include <string>

using namespace ceammc::music;
using namespace ceammc::parser;
using namespace ceammc;

#define tl_println(...) fmt::println(__VA_ARGS__)

namespace {

struct RagelTempo {
    int ival { 0 };
    int fnum { 0 };
    int fden { 1 };
    int dur_num { 1 };
    int dur_den { 4 };
};

Tempo fromRagel(const RagelTempo& t)
{
    float bpm = t.ival + t.fnum / float(t.fden);
    Tempo res { bpm, t.dur_den };
    res.setDuration(Duration(t.dur_num, t.dur_den));
    return res;
}

struct RagelEventTime {
    double time;
    std::vector<double> times;
    int sign {0};
    t_symbol* rel_event {&s_};
    int bar  {-1};
    int beat {0};
    int beat_fraq {0};
    int beat_fraq10 {1};
    bool relative {false};

    void reset() { *this = RagelEventTime{}; }
};

struct RagelBar {
    int count = 0;
    int num = 0;
    int div = 0;
    bool inf = false;
};

struct FSM {
    double time_unit {0};
    std::string symbol;
    t_symbol* event_id {&s_};
    TimeLineEventSend act_send;
    TimeLineEventOutput act_out;
    TimeLineEventPreset act_preset;
    double event_time {0};
    ceammc::AtomList args;
    int bpm_bar  {0};
    int bpm_beat {0};

    void onTimeSmpteDone(const ceammc::parser::fsm::SmpteData& smpte) {
        time_unit = smpte.sec * 1000 + smpte.min * 60000 + smpte.hour * 3600000;
    }

    void onTimeInfDone() {
        time_unit = std::numeric_limits<t_float>::max();
    }

    void onEventIdDone() {
        event_id = ::gensym(symbol.c_str());
        symbol.clear();
    }

    void onSendTarget() {
        act_send.target = ::gensym(symbol.c_str());
        symbol.clear();
    }

    void onArgsDone() {
        args = ceammc::AtomList::parseString(symbol.c_str());
    }

    t_symbol* gensym() { return ::gensym(symbol.c_str()); }

    t_symbol* genAnonEventName() {
        static int id = 0;
        char buf[64];
        snprintf(buf, sizeof(buf), ".event%d", id++);
        return ::gensym(buf);
    }
};
}

namespace ceammc {
namespace parser {

void TimeLine::dump()
{
    tl_println("bpm:");
    for (auto& t : tempo) {
        tl_println(" - {}.{}: {}", t.bar, t.beat, t.tempo.toString());
    }

    tl_println("def events:");
    for (auto& e : event_defs) {
        if (e.send.target != &s_)
            tl_println(" - {:>12}: !send {} {}", e.name->s_name, e.send.target->s_name, to_string(e.send.args));

        if (!e.out.args.empty())
            tl_println(" - {:>12}: !out {}", e.name->s_name, to_string(e.out.args));

        if (e.preset.idx >= 0)
            tl_println(" - {:>12}: !preset {}", e.name->s_name, e.preset.idx);
    }

    tl_println("timeline:");
    for (auto& e : events) {
        auto name = event_defs[e.idx].name->s_name;
        tl_println(" - {: 10}ms: '{}'[{}]", e.time, name, e.idx);
    }
}

void TimeLine::addEventAt(t_symbol* name, double time, bool relativeToLast)
{
    if (time < 0)
        return;

    auto event_idx = findEventByName(name);
    if (event_idx < 0) {
        tl_println("event '{}' not found", name->s_name);
        return;
    }

    TimeLineEvent ev;
    if (relativeToLast) {
        if (events.empty())
            ev.time = time;
        else
            ev.time = std::prev(events.end())->time + time;
    } else
        ev.time = time;

    ev.idx = event_idx;
    events.insert(ev);
}

double TimeLine::findBarTime(int bar, int beat, float beatFraq)
{
    if (bars.empty())
        return -1;

    if (bar < 0) {
        tl_println("invalid bar value: {}", bar);
        return -1;
    }

    double res = 0;
    int bar_count = 0;
    for (auto& b : bars) {
        for (int i = 0; i < b.count; i++, bar_count++) {
            auto t = barTempo(bar_count);
            if (bar_count < bar)
                res += b.durationMs(t);

            if (bar_count == bar) {
                if (beat < 0 || beat >= b.count)
                    tl_println("invalid beat value: {}", beat);

                res += b.beatStartMs(t, beat + beatFraq);
                return res;
            }
        }
    }

    return -1;
}

}
}


#line 194 "lex/parser_timeline.cpp"
static const int timeline_parser_start = 1;
static const int timeline_parser_first_final = 274;
static const int timeline_parser_error = 0;

static const int timeline_parser_en_main = 1;


#line 439 "lex/parser_timeline.rl"


namespace ceammc {
namespace parser {

bool parse_timelime(const char* str, TimeLine& tl)
{
    const auto len = strlen(str);
    if (len == 0)
        return false;

    int cs = 0;
    const char* p = str;
    const char* pe = p + len;
    const char* eof = pe;

    DECLARE_RAGEL_COMMON_VARS;
    DECLARE_RAGEL_NUMERIC_VARS;
    FSM fsm;
    fsm::SmpteData smpte;
    RagelEventTime event_time;
    RagelBar bar;
    RagelTempo bpm;

    
#line 228 "lex/parser_timeline.cpp"
	{
	cs = timeline_parser_start;
	}

#line 464 "lex/parser_timeline.rl"
    
#line 235 "lex/parser_timeline.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 32: goto st2;
		case 35: goto st4;
		case 43: goto tr3;
		case 45: goto tr4;
		case 47: goto st3;
		case 48: goto tr6;
		case 98: goto st149;
		case 101: goto st165;
		case 116: goto st214;
		case 118: goto st249;
	}
	if ( (*p) > 53 ) {
		if ( 54 <= (*p) && (*p) <= 57 )
			goto tr8;
	} else if ( (*p) >= 49 )
		goto tr7;
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 32: goto st2;
		case 47: goto st3;
	}
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 47 )
		goto st274;
	goto st0;
st274:
	if ( ++p == pe )
		goto _test_eof274;
case 274:
	if ( (*p) == 10 )
		goto st0;
	goto st274;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	switch( (*p) ) {
		case 48: goto tr14;
		case 95: goto tr16;
	}
	if ( (*p) < 65 ) {
		if ( 49 <= (*p) && (*p) <= 57 )
			goto tr15;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr16;
	} else
		goto tr16;
	goto st0;
tr14:
#line 29 "lex/ragel_numeric.rl"
	{ (ragel_num.vint *= 10) += ((*p)-'0'); }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 311 "lex/parser_timeline.cpp"
	switch( (*p) ) {
		case 32: goto tr17;
		case 43: goto tr18;
		case 45: goto tr18;
		case 46: goto tr19;
	}
	goto st0;
tr17:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 377 "lex/parser_timeline.rl"
	{ event_time.bar = ragel_num.vint; ragel_num.vint = 0; }
#line 286 "lex/parser_timeline.rl"
	{
        fmt::println("#{}.{}{}{}", event_time.bar, event_time.beat, event_time.sign > 0 ? '+' : '-', event_time.time);

        auto t = tl.findBarTime(event_time.bar, event_time.beat, double(event_time.beat_fraq) / event_time.beat_fraq10);
        event_time.times.clear();

        if (t >= 0) {
            event_time.times.push_back(t + (event_time.time * event_time.sign));
        } else {
            fmt::println("can't find bar #{}.{}", event_time.bar, event_time.beat);
            event_time.time = -1;
        }

        fsm.time_unit = 0;
    }
	goto st6;
tr116:
#line 17 "lex/ragel_units.rl"
	{ragel_type = TYPE_HOUR;}
#line 196 "lex/parser_timeline.rl"
	{
        switch(ragel_type) {
        case TYPE_MSEC:  fsm.time_unit = ragel_num.getFloat();   break;
        case TYPE_SEC:   fsm.time_unit = ragel_num.getFloat() * 1000; break;
        case TYPE_MIN:   fsm.time_unit = ragel_num.getFloat() * 60000; break;
        case TYPE_HOUR:  fsm.time_unit = ragel_num.getFloat() * 3600000; break;
        default:
        break;
        }
    }
#line 265 "lex/parser_timeline.rl"
	{
        event_time.time = fsm.time_unit;
        fsm.time_unit = 0;
    }
#line 286 "lex/parser_timeline.rl"
	{
        fmt::println("#{}.{}{}{}", event_time.bar, event_time.beat, event_time.sign > 0 ? '+' : '-', event_time.time);

        auto t = tl.findBarTime(event_time.bar, event_time.beat, double(event_time.beat_fraq) / event_time.beat_fraq10);
        event_time.times.clear();

        if (t >= 0) {
            event_time.times.push_back(t + (event_time.time * event_time.sign));
        } else {
            fmt::println("can't find bar #{}.{}", event_time.bar, event_time.beat);
            event_time.time = -1;
        }

        fsm.time_unit = 0;
    }
	goto st6;
tr120:
#line 18 "lex/ragel_units.rl"
	{ragel_type = TYPE_MIN;}
#line 196 "lex/parser_timeline.rl"
	{
        switch(ragel_type) {
        case TYPE_MSEC:  fsm.time_unit = ragel_num.getFloat();   break;
        case TYPE_SEC:   fsm.time_unit = ragel_num.getFloat() * 1000; break;
        case TYPE_MIN:   fsm.time_unit = ragel_num.getFloat() * 60000; break;
        case TYPE_HOUR:  fsm.time_unit = ragel_num.getFloat() * 3600000; break;
        default:
        break;
        }
    }
#line 265 "lex/parser_timeline.rl"
	{
        event_time.time = fsm.time_unit;
        fsm.time_unit = 0;
    }
#line 286 "lex/parser_timeline.rl"
	{
        fmt::println("#{}.{}{}{}", event_time.bar, event_time.beat, event_time.sign > 0 ? '+' : '-', event_time.time);

        auto t = tl.findBarTime(event_time.bar, event_time.beat, double(event_time.beat_fraq) / event_time.beat_fraq10);
        event_time.times.clear();

        if (t >= 0) {
            event_time.times.push_back(t + (event_time.time * event_time.sign));
        } else {
            fmt::println("can't find bar #{}.{}", event_time.bar, event_time.beat);
            event_time.time = -1;
        }

        fsm.time_unit = 0;
    }
	goto st6;
tr124:
#line 19 "lex/ragel_units.rl"
	{ragel_type = TYPE_MSEC;}
#line 196 "lex/parser_timeline.rl"
	{
        switch(ragel_type) {
        case TYPE_MSEC:  fsm.time_unit = ragel_num.getFloat();   break;
        case TYPE_SEC:   fsm.time_unit = ragel_num.getFloat() * 1000; break;
        case TYPE_MIN:   fsm.time_unit = ragel_num.getFloat() * 60000; break;
        case TYPE_HOUR:  fsm.time_unit = ragel_num.getFloat() * 3600000; break;
        default:
        break;
        }
    }
#line 265 "lex/parser_timeline.rl"
	{
        event_time.time = fsm.time_unit;
        fsm.time_unit = 0;
    }
#line 286 "lex/parser_timeline.rl"
	{
        fmt::println("#{}.{}{}{}", event_time.bar, event_time.beat, event_time.sign > 0 ? '+' : '-', event_time.time);

        auto t = tl.findBarTime(event_time.bar, event_time.beat, double(event_time.beat_fraq) / event_time.beat_fraq10);
        event_time.times.clear();

        if (t >= 0) {
            event_time.times.push_back(t + (event_time.time * event_time.sign));
        } else {
            fmt::println("can't find bar #{}.{}", event_time.bar, event_time.beat);
            event_time.time = -1;
        }

        fsm.time_unit = 0;
    }
	goto st6;
tr127:
#line 22 "lex/ragel_units.rl"
	{ragel_type = TYPE_SEC;}
#line 196 "lex/parser_timeline.rl"
	{
        switch(ragel_type) {
        case TYPE_MSEC:  fsm.time_unit = ragel_num.getFloat();   break;
        case TYPE_SEC:   fsm.time_unit = ragel_num.getFloat() * 1000; break;
        case TYPE_MIN:   fsm.time_unit = ragel_num.getFloat() * 60000; break;
        case TYPE_HOUR:  fsm.time_unit = ragel_num.getFloat() * 3600000; break;
        default:
        break;
        }
    }
#line 265 "lex/parser_timeline.rl"
	{
        event_time.time = fsm.time_unit;
        fsm.time_unit = 0;
    }
#line 286 "lex/parser_timeline.rl"
	{
        fmt::println("#{}.{}{}{}", event_time.bar, event_time.beat, event_time.sign > 0 ? '+' : '-', event_time.time);

        auto t = tl.findBarTime(event_time.bar, event_time.beat, double(event_time.beat_fraq) / event_time.beat_fraq10);
        event_time.times.clear();

        if (t >= 0) {
            event_time.times.push_back(t + (event_time.time * event_time.sign));
        } else {
            fmt::println("can't find bar #{}.{}", event_time.bar, event_time.beat);
            event_time.time = -1;
        }

        fsm.time_unit = 0;
    }
	goto st6;
tr132:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 379 "lex/parser_timeline.rl"
	{ event_time.beat = ragel_num.vint; ragel_num.vint = 0; }
#line 286 "lex/parser_timeline.rl"
	{
        fmt::println("#{}.{}{}{}", event_time.bar, event_time.beat, event_time.sign > 0 ? '+' : '-', event_time.time);

        auto t = tl.findBarTime(event_time.bar, event_time.beat, double(event_time.beat_fraq) / event_time.beat_fraq10);
        event_time.times.clear();

        if (t >= 0) {
            event_time.times.push_back(t + (event_time.time * event_time.sign));
        } else {
            fmt::println("can't find bar #{}.{}", event_time.bar, event_time.beat);
            event_time.time = -1;
        }

        fsm.time_unit = 0;
    }
	goto st6;
tr137:
#line 30 "lex/ragel_numeric.rl"
	{
        ragel_num.vint *= ragel_num.sign;
        ragel_type = TYPE_INT;
        ragel_cat  = CAT_NUMBER;
    }
#line 378 "lex/parser_timeline.rl"
	{ event_time.beat_fraq = ragel_num.vint; ragel_num.vint = 0; }
#line 379 "lex/parser_timeline.rl"
	{ event_time.beat = ragel_num.vint; ragel_num.vint = 0; }
#line 286 "lex/parser_timeline.rl"
	{
        fmt::println("#{}.{}{}{}", event_time.bar, event_time.beat, event_time.sign > 0 ? '+' : '-', event_time.time);

        auto t = tl.findBarTime(event_time.bar, event_time.beat, double(event_time.beat_fraq) / event_time.beat_fraq10);
        event_time.times.clear();

        if (t >= 0) {
            event_time.times.push_back(t + (event_time.time * event_time.sign));
        } else {
            fmt::println("can't find bar #{}.{}", event_time.bar, event_time.beat);
            event_time.time = -1;
        }

        fsm.time_unit = 0;
    }
	goto st6;
tr139:
#line 254 "lex/parser_timeline.rl"
	{
       event_time.rel_event = fsm.gensym();
       fsm.symbol.clear();
    }
#line 270 "lex/parser_timeline.rl"
	{
        //fmt::println("#{}{}{}", event_time.rel_event->s_name, event_time.sign > 0 ? '+' : '-', event_time.time);

        bool found = false;
        for (auto t: tl.findEventTime(event_time.rel_event)) {
            found = true;
            event_time.times.push_back(t + event_time.time * event_time.sign);
        }

        if (!found)
            fmt::println("can't find event: '{}'", event_time.rel_event->s_name);

        fsm.time_unit = 0;
        fsm.symbol.clear();
    }
	goto st6;
tr151:
#line 17 "lex/ragel_units.rl"
	{ragel_type = TYPE_HOUR;}
#line 196 "lex/parser_timeline.rl"
	{
        switch(ragel_type) {
        case TYPE_MSEC:  fsm.time_unit = ragel_num.getFloat();   break;
        case TYPE_SEC:   fsm.time_unit = ragel_num.getFloat() * 1000; break;
        case TYPE_MIN:   fsm.time_unit = ragel_num.getFloat() * 60000; break;
        case TYPE_HOUR:  fsm.time_unit = ragel_num.getFloat() * 3600000; break;
        default:
        break;
        }
    }
#line 265 "lex/parser_timeline.rl"
	{
        event_time.time = fsm.time_unit;
        fsm.time_unit = 0;
    }
#line 270 "lex/parser_timeline.rl"
	{
        //fmt::println("#{}{}{}", event_time.rel_event->s_name, event_time.sign > 0 ? '+' : '-', event_time.time);

        bool found = false;
        for (auto t: tl.findEventTime(event_time.rel_event)) {
            found = true;
            event_time.times.push_back(t + event_time.time * event_time.sign);
        }

        if (!found)
            fmt::println("can't find event: '{}'", event_time.rel_event->s_name);
